<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.PostDetailActivity">

        <include
            android:id="@+id/post_author_layout"
            layout="@layout/include_post_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/post_title"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            tools:text="@string/my_post_text"
            android:layout_below="@+id/post_author_layout"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/post_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorLink="@color/indigo_color"
            tools:text="test text"
            android:autoLink="web"
            android:layout_below="@+id/video_layout"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:id="@+id/comment_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/post_body"
            android:layout_marginTop="@dimen/comment_form_margin"
            android:weightSum="1.0">

            <EditText
                android:id="@+id/field_comment_text"
                android:layout_width="@dimen/width_0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/field_comment_hint_text"/>

            <Button
                android:id="@+id/button_post_comment"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="@dimen/width_0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:text="@string/btn_post_comment_text"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_comments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/comment_form"
            tools:listitem="@layout/item_comment" />

        <RelativeLayout
            android:id="@+id/video_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_layout_height"
            android:layout_below="@+id/post_title">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:id="@+id/video_load_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <VideoView
                android:id="@+id/video_view"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/video_view_margin"
                android:layout_marginBottom="@dimen/video_view_margin"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_below="@+id/video_load_progressbar" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>